--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="jet">#FF353535</color>
     <color name="gray">#FF767676</color>
     <color name="silver">#FFB7B7B7</color>
+    <color name="empty">#00000000</color>
 </resources>
