--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/black"
+        android:elevation="4dp"
         android:padding="10dp"
         android:shadowColor="@color/black"
         android:text="@string/app_name"
@@ -27,6 +28,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/jet"
+        android:clipToPadding="false"
+        android:paddingBottom="170dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
