--- a/app/src/main/res/layout/notification.xml
+++ b/app/src/main/res/layout/notification.xml
@@ -5,14 +5,17 @@
     android:id="@+id/notificationView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    android:elevation="5dp">
+    android:layout_marginLeft="10dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginBottom="5dp">
 
     <View
         android:id="@+id/vColorStrip"
         android:layout_width="0dp"
         android:layout_height="10dp"
         android:background="@color/accent"
+        android:elevation="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,10 +23,10 @@
     <View
         android:id="@+id/vTitle"
         android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:background="@color/silver"
+        android:elevation="2dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/vColorStrip" />
 
@@ -32,6 +35,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/rounded_bottom_corners"
+        android:elevation="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,10 +46,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="8dp"
+        android:elevation="2dp"
+        android:singleLine="true"
         android:text="TextView"
+        android:textAlignment="viewStart"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/vTitle"
         app:layout_constraintEnd_toStartOf="@+id/btnDelete"
@@ -56,9 +63,12 @@
         android:id="@+id/btnDelete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
         android:background="@color/empty"
-        android:padding="5dp"
+        android:elevation="2dp"
+        android:padding="12dp"
+        android:scaleType="center"
+        android:scaleX="1.2"
+        android:scaleY="1.2"
         android:src="@drawable/outline_delete_24"
         app:layout_constraintBottom_toBottomOf="@+id/vTitle"
         app:layout_constraintEnd_toStartOf="@+id/btnEdit"
@@ -68,9 +78,12 @@
         android:id="@+id/btnEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
         android:background="@color/empty"
-        android:padding="5dp"
+        android:elevation="2dp"
+        android:padding="12dp"
+        android:scaleType="center"
+        android:scaleX="1.2"
+        android:scaleY="1.2"
         android:src="@drawable/baseline_edit_square_24"
         app:layout_constraintBottom_toBottomOf="@+id/vTitle"
         app:layout_constraintEnd_toEndOf="@+id/vTitle"
@@ -81,6 +94,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:elevation="2dp"
         android:fontFamily="sans-serif-thin"
         android:text="TextView"
         android:textAllCaps="false"
@@ -93,6 +107,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
+        android:elevation="2dp"
         android:fontFamily="sans-serif-thin"
         android:text="TextView"
         android:textColor="@color/black"
@@ -106,6 +121,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        android:elevation="2dp"
         android:text="TextView"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@+id/vContent"
