--- a/app/src/main/res/layout/notification.xml
+++ b/app/src/main/res/layout/notification.xml
@@ -65,11 +65,9 @@
         android:layout_height="wrap_content"
         android:background="@color/empty"
         android:elevation="2dp"
-        android:padding="12dp"
+        android:padding="8dp"
         android:scaleType="center"
-        android:scaleX="1.2"
-        android:scaleY="1.2"
-        android:src="@drawable/outline_delete_24"
+        android:src="@drawable/outline_delete_outline_30"
         app:layout_constraintBottom_toBottomOf="@+id/vTitle"
         app:layout_constraintEnd_toStartOf="@+id/btnEdit"
         app:layout_constraintTop_toTopOf="@+id/vTitle" />
@@ -78,13 +76,12 @@
         android:id="@+id/btnEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:background="@color/empty"
         android:elevation="2dp"
-        android:padding="12dp"
+        android:padding="8dp"
         android:scaleType="center"
-        android:scaleX="1.2"
-        android:scaleY="1.2"
-        android:src="@drawable/baseline_edit_square_24"
+        android:src="@drawable/baseline_edit_square_30"
         app:layout_constraintBottom_toBottomOf="@+id/vTitle"
         app:layout_constraintEnd_toEndOf="@+id/vTitle"
         app:layout_constraintTop_toTopOf="@+id/vTitle" />
