--- a/app/src/main/res/layout/fragment_new_notification.xml
+++ b/app/src/main/res/layout/fragment_new_notification.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frameLayout"
+    android:id="@+id/clAddNotification"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/jet"
@@ -95,6 +95,7 @@
         app:layout_constraintTop_toTopOf="@+id/vTitle" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clDescription"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_bottom_corners"
@@ -104,7 +105,7 @@
         app:layout_constraintTop_toBottomOf="@+id/vTitle">
 
         <EditText
-            android:id="@+id/editTextTextMultiLine"
+            android:id="@+id/iTxtDescription"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
