--- a/app/src/main/res/layout/fragment_new_notification.xml
+++ b/app/src/main/res/layout/fragment_new_notification.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/jet"
-    tools:context=".fragments.NewNotificationFragment">
+    tools:context=".fragments.NewReminderFragment">
 
     <View
         android:id="@+id/vTitle"
