--- a/app/src/main/res/layout/calendar_cell.xml
+++ b/app/src/main/res/layout/calendar_cell.xml
@@ -14,6 +14,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <View
+        android:id="@+id/vSelectedCircle"
+        android:layout_width="30sp"
+        android:layout_height="30sp"
+        android:background="@drawable/date_circle"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.25"
+        tools:visibility="visible" />
+
     <TextView
         android:id="@+id/txtCalendarDay"
         android:layout_width="wrap_content"
@@ -21,9 +34,8 @@
         android:text="1"
         android:textColor="@color/white"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.25" />
+        app:layout_constraintBottom_toBottomOf="@+id/vSelectedCircle"
+        app:layout_constraintEnd_toEndOf="@+id/vSelectedCircle"
+        app:layout_constraintStart_toStartOf="@+id/vSelectedCircle"
+        app:layout_constraintTop_toTopOf="@+id/vSelectedCircle" />
 </androidx.constraintlayout.widget.ConstraintLayout>
