--- a/app/src/main/res/layout/fragment_new_notification.xml
+++ b/app/src/main/res/layout/fragment_new_notification.xml
@@ -126,4 +126,58 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <View
+        android:id="@+id/vSelection"
+        android:layout_width="0dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/rounded_corners"
+        android:elevation="2dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/clDescription" />
+
+    <Switch
+        android:id="@+id/swSelection"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="2dp"
+        android:switchMinWidth="70dp"
+        android:thumb="@drawable/custom_thumb"
+        android:track="@drawable/custom_track"
+        app:layout_constraintBottom_toBottomOf="@+id/vSelection"
+        app:layout_constraintEnd_toEndOf="@+id/vSelection"
+        app:layout_constraintStart_toStartOf="@+id/vSelection"
+        app:layout_constraintTop_toTopOf="@+id/vSelection" />
+
+    <TextView
+        android:id="@+id/txtReminder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:elevation="2dp"
+        android:text="Reminder"
+        android:textAlignment="viewStart"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="@+id/vSelection"
+        app:layout_constraintStart_toStartOf="@+id/vSelection"
+        app:layout_constraintTop_toTopOf="@+id/vSelection" />
+
+    <TextView
+        android:id="@+id/txtEvent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:elevation="2dp"
+        android:text="Event"
+        android:textAlignment="viewEnd"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="@+id/vSelection"
+        app:layout_constraintEnd_toEndOf="@+id/vSelection"
+        app:layout_constraintTop_toTopOf="@+id/vSelection" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
