--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,8 +9,8 @@
         <item name="floatingActionButtonPrimaryStyle">@color/black</item>
     </style>
     
-    <style name="CustomDatePickerDialog" parent="Theme.MaterialComponents.Dialog">
-        <item name="colorAccent">@color/accent</item>
+    <style name="CustomDatePickerDialog" parent="Theme.MaterialComponents.Light.Dialog">
+        <item name="colorAccent">@color/black</item>
         <!--selected Item color-->
         <item name="colorControlActivated">@color/accent</item>
         <!-- Highlight item color-->
@@ -18,14 +18,33 @@
         <!--Calender Background color -->
         <item name="android:windowBackground">@drawable/rounded_corners_dark</item>
         <!-- Ok Cancel Color-->
-        <item name="android:textColor">@color/alert</item>
+        <item name="android:textColor">@color/accent</item>
         <!-- Week TextColor-->
         <item name="android:textColorSecondary">@color/accent</item>
         <!-- Calender Number color arrow color (< >) -->
         <item name="android:textColorPrimary">@color/white</item>
         <!--day , month-->
         <item name="android:textColorPrimaryInverse">@color/white</item>
-        <item name="colorButtonNormal">@color/accent</item>
+        <item name="colorOnPrimary">@color/accent</item>
+    </style>
 
+    <style name="CustomTimePickerDialog" parent="Theme.MaterialComponents.Light.Dialog">
+        <item name="colorAccent">@color/black</item>
+        <item name="colorControlActivated">@color/accent</item>
+        <item name="android:windowBackground">@drawable/rounded_corners_dark</item>
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColorSecondary">@color/silver</item>
+        <item name="android:textColorPrimaryInverse">@color/white</item>
+        <item name="android:textColorSecondaryInverse">@color/silver</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="colorOnPrimary">@color/accent</item>
+        <item name="android:timePickerStyle">@style/TimePicker</item>
+    </style>
+    <style name="TimePicker" parent="android:Widget.Material.TimePicker">
+        <item name="android:headerBackground">@color/black</item>
+        <item name="android:numbersTextColor">@color/white</item>
+        <item name="android:numbersSelectorColor">@color/accent</item>
+        <item name="android:numbersBackgroundColor">@color/gray</item>
+        <item name="android:background">@color/jet</item>
     </style>
 </resources>
