--- a/app/src/main/res/layout/fragment_new_reminder_event.xml
+++ b/app/src/main/res/layout/fragment_new_reminder_event.xml
@@ -379,8 +379,9 @@
         android:layout_marginEnd="8dp"
         android:alpha="0.5"
         android:elevation="2dp"
+        android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/vLine2"
         app:layout_constraintEnd_toStartOf="@+id/btnRepeat"
         app:layout_constraintStart_toEndOf="@+id/txtRepeat"
