--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -54,4 +54,28 @@
         <item name="android:windowBackground">@drawable/rounded_corners_dark</item>
         <item name="colorOnPrimary">@color/accent</item>
     </style>
+
+    <style name="ColorPickerDialog">
+        <!-- Set background color for the dialog -->
+        <item name="android:windowBackground">@drawable/rounded_corners_dark</item>
+
+        <!-- Remove default dialog margins -->
+        <item name="android:windowMinWidthMajor">90%</item>
+        <item name="android:windowMinWidthMinor">90%</item>
+
+        <!-- Control the dialog's elevation/shadow -->
+        <item name="android:windowElevation">8dp</item>
+
+        <!-- Set dialog to have rounded corners -->
+        <item name="android:windowIsFloating">true</item>
+
+        <item name="android:textColor">@color/white</item>
+        <item name="buttonBarPositiveButtonStyle">@style/CustomDialogButtonStyle</item>
+        <item name="buttonBarNegativeButtonStyle">@style/CustomDialogButtonStyle</item>
+    </style>
+    <!-- Custom style for dialog buttons -->
+    <style name="CustomDialogButtonStyle">
+        <item name="android:textColor">@color/accent</item>
+        <item name="backgroundTint">@color/empty</item>
+    </style>
 </resources>
