--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -169,4 +169,29 @@
         app:rippleColor="@color/white"
         app:srcCompat="@drawable/baseline_add_50" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="@style/CustomProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="9dp"
+        android:indeterminateBehavior="repeat"
+        android:indeterminateOnly="true"
+        app:layout_constraintBottom_toBottomOf="@+id/rvCalendar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/rvCalendar"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+
+    <View
+        android:id="@+id/vCurtain"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/jet"
+        android:elevation="8dp"
+        android:outlineProvider="none"
+        app:layout_constraintBottom_toBottomOf="@+id/rvCalendar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/rvCalendar"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
